# drivelaw

./: .gitignore  README.md  index.html  pyproject.toml  setup.py
DriveLaW-Act/: README.md  evaluate_planner.sh  requirements.txt  run_caching_drivelaw.sh  train_planner.sh  train_planner_ema.sh
DriveLaW-Act/navsim/agents/videodrive/: diffusion.py  run_training_videodrive.py  run_training_videodrive_diffusiondrive.py  run_training_videodrive_ema.py  run_training_videodrive_stage1.py  run_training_videodrive_stage2.py  test_diffusers.py  videodrive_agent.py  videodrive_backbone.py  videodrive_features.py
DriveLaW-Act/navsim/agents/videodrive/configs/ltx_model/: video_model_infer_navsim.yaml  video_model_infer_navsim_dffusiondrive.yaml  video_model_infer_navsim_ema.yaml  video_model_infer_navsim_eval.yaml  video_model_infer_navsim_eval_stage1.yaml  video_model_infer_navsim_eval_stage2.yaml  video_model_infer_navsim_stage2.yaml
DriveLaW-Act/navsim/agents/videodrive/runner/: ge_inferencer.py  ge_trainer.py
DriveLaW-Act/navsim/agents/videodrive/utils/: data_utils.py  data_utils_padding.py  internvl_preprocess.py  model_loader.py  model_utils.py
DriveLaW-Act/navsim/common/: dataclasses.py  dataloader.py
DriveLaW-Act/navsim/planning/script/: LICENSE  run_dataset_caching.py  run_pdm_score_videodrive.py  run_training_videodrive.py
DriveLaW-Act/navsim/planning/training/: dataset.py
DriveLaW-Act/scripts/evaluation/: run_caching_videodrive_hidden_state.sh  run_metric_caching.sh  run_metric_caching_test.sh  run_metric_caching_train.sh  run_videodrive_agent_pdm_score_evaluation.sh  run_videodrive_agent_pdm_score_evaluation_stage1.sh  run_videodrive_agent_pdm_score_evaluation_stage2.sh  run_videodrive_agent_vis.sh
DriveLaW-Act/scripts/training/: run_videodrive_train.sh  run_videodrive_train_stage1.sh  run_videodrive_train_stage2.sh
DriveLaW-Video/Infer/: README.md  infer.py  infer.sh
DriveLaW-Video/Infer/demo/prompts/: scene_0001_prompt.txt
DriveLaW-Video/Train/: README.md  preprocess.sh  pyproject.toml  train.sh
DriveLaW-Video/Train/configs/: drivelaw_video.yaml
DriveLaW-Video/Train/docs/: Data-preparation.md  configuration-reference.md  dataset-preparation.md  quick-start.md  training-guide.md  training-modes.md  troubleshooting.md  utility-scripts.md
DriveLaW-Video/Train/scripts/: app_gradio.py  caption_videos.py  compute_condition.py  convert_checkpoint.py  decode_latents.py  preprocess_dataset.py  process_captions.py  process_videos.py  run_pipeline.py  split_scenes.py  train.py  train_distributed.py
DriveLaW-Video/Train/src/ltxv_trainer/: captioning.py  config.py  datasets.py  hf_hub_utils.py  ltxv_pipeline.py  ltxv_utils.py  model_loader.py  quantization.py  timestep_samplers.py  trainer.py  training_strategies.py  utils.py  video_utils.py
DriveLaW-Video/Train/test/: training_config.yaml
(+19 files in other folders)
